--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ h1 {
   color: white;
   width: 100%;
   font-size: 1.5em;
+  border: none;
 }
 
 .user-board {
@@ -151,6 +152,7 @@ h1 {
   padding: 20px;
   border: solid .1px rgba(255, 255, 255, .1);
   margin: 0 auto!important;
+  color: #fff;
 }
 
 .border {
