--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,14 @@ h1 {
 }
 .user {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+  border-bottom: solid .1px rgba(255, 255, 255, .1);
+}
+.user:last-child {
+  border-bottom: none;
 }
 
 .nameInput {
